--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,8 +17,9 @@
     <style name="myEditText" parent="TextAppearance.AppCompat">
         <!-- Customize your theme here. -->
         <item name="android:textColorHint">#C6CBD4</item>
-        <item name="android:textSize">22sp</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:textColor">#C6CBD4</item>
-
+        <item name="fontFamily">@font/andalus</item>
+        <item name="singleLine">true</item>
     </style>
 </resources>
