--- a/app/src/main/res/layout/activity_login_profile.xml
+++ b/app/src/main/res/layout/activity_login_profile.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/loginprofile_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF"
     tools:context=".LoginActivity">
     <View
         android:id="@+id/Viewlogo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
         android:background="@drawable/loginlogoprofile"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30sp"
@@ -19,10 +20,11 @@
         android:textColor="#FFF"
         android:text="@string/l"
         android:fontFamily="@font/simsun"
-        android:layout_marginTop="35sp"
-        android:layout_gravity="center_horizontal"
-        android:textSize="90sp"
+        android:layout_alignBottom="@+id/Viewlogo"
         android:layout_centerHorizontal="true"
+        android:textSize="75sp"
+        android:layout_marginBottom="20sp"
+
         />
     <TextView
         android:id="@+id/txt_namelogo"
@@ -151,7 +153,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="@string/register"
-                android:textSize="25sp"
+                android:textSize="22sp"
                 android:textAllCaps="false"
                 android:layout_marginTop="15dp"
                 android:layout_marginStart="10dp"
