--- a/app/src/main/res/layout/activity_number.xml
+++ b/app/src/main/res/layout/activity_number.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
+android:id="@+id/numberactivity_parent"
     android:background="@drawable/logingradint"
     tools:context=".LoginActivity">
 
