--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/logingradint"
-    tools:context=".LoginActivity">
+    tools:context=".activity.LoginActivity">
 
   <LinearLayout
       android:layout_width="match_parent"
