--- a/app/src/main/res/layout/activity_login_profile.xml
+++ b/app/src/main/res/layout/activity_login_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF"
-    tools:context=".LoginActivity">
+    tools:context=".activity.LoginActivity">
     <View
         android:id="@+id/Viewlogo"
         android:layout_width="110dp"
