--- a/app/src/main/res/layout/activity_number.xml
+++ b/app/src/main/res/layout/activity_number.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
 android:id="@+id/numberactivity_parent"
     android:background="@drawable/logingradint"
-    tools:context=".LoginActivity">
+    tools:context=".activity.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
