--- a/app/src/main/res/layout/activity_login_profile.xml
+++ b/app/src/main/res/layout/activity_login_profile.xml
@@ -12,7 +12,7 @@
         android:layout_height="110dp"
         android:background="@drawable/loginlogoprofile"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30sp"
+        android:layout_marginTop="5sp"
         />
     <TextView
         android:layout_width="wrap_content"
@@ -44,7 +44,7 @@
         android:layout_height="match_parent"
         android:layout_below="@id/txt_namelogo"
         android:background="@drawable/loginprofileshape"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:weightSum="9"
         >
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="horizontal"
-            android:layout_weight="6"
+            android:layout_weight="6.5"
             android:weightSum="7"
             android:baselineAligned="false">
             <LinearLayout
@@ -74,7 +74,7 @@
                 android:layout_marginEnd="40dp"
                 android:backgroundTint="#AAB3BE"
                 style="@style/myEditText"
-                android:textSize="19sp"
+                android:textSize="21sp"
                 android:layout_marginTop="40dp"
                 android:hint="@string/name"
                 android:layout_marginStart="5dp"
@@ -90,7 +90,7 @@
                 android:layout_weight="1"
                 android:layout_marginEnd="40dp"
                 android:backgroundTint="#AAB3BE"
-                android:textSize="19sp"
+                android:textSize="21sp"
                 style="@style/myEditText"
                 android:hint="@string/username"
                 android:layout_marginStart="5dp"
@@ -105,7 +105,7 @@
                 android:layout_weight="1"
                 android:layout_marginEnd="40dp"
                 android:backgroundTint="#AAB3BE"
-                android:textSize="19sp"
+                android:textSize="21sp"
                 style="@style/myEditText"
                 android:hint="@string/password"
                 android:layout_marginStart="5dp"
@@ -114,13 +114,13 @@
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/edt_confirm_loginprofileactivity"
                 android:inputType="textPassword"
-                android:imeOptions="actionNext"
+                android:imeOptions="actionDone"
                 android:layout_width="200dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_marginEnd="40dp"
                 android:backgroundTint="#AAB3BE"
-                android:textSize="19sp"
+                android:textSize="21sp"
                 style="@style/myEditText"
                 android:hint="@string/confirm"
                 android:layout_marginStart="5dp"
@@ -135,6 +135,7 @@
                 android:layout_weight="1"
                 android:layout_marginEnd="40dp"
                 android:backgroundTint="#AAB3BE"
+                android:enabled="false"
                 android:textSize="19sp"
                 style="@style/myEditText"
                 android:hint="@string/phone_number"
@@ -147,7 +148,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2">
+            android:layout_weight="1.5">
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_register_loginprofileactivity"
                 android:layout_width="match_parent"
