--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -3,12 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/logingradint"
+    android:background="#FFF"
     android:orientation="vertical">
         <ImageView
             android:id="@+id/img_message"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:scaleType="fitXY"
                 android:src="@drawable/ic_error"
                 android:layout_centerHorizontal="true"
@@ -17,24 +17,27 @@
     android:id="@+id/txt_message"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="20sp"
+    android:textSize="18sp"
     android:text="@string/message"
-    android:textColor="#fff"
+    android:textColor="#000000"
     style="@style/myEditText"
-    android:gravity="center"
+    android:gravity="left"
     android:layout_margin="10sp"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="20dp"
     android:layout_centerVertical="true"
     android:layout_centerHorizontal="true"/>
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_ok"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/loginbutton"
+            android:background="#49A3EA"
             android:text="@string/ok"
             android:textColor="#FFF"
-            android:textSize="30sp"
-            android:layout_margin="20sp"
-
+            android:textSize="20sp"
+           android:gravity="center"
+            android:layout_centerHorizontal="true"
+           android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
 
             />
