--- a/app/src/main/res/layout/activity_predict.xml
+++ b/app/src/main/res/layout/activity_predict.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/sectiononehomegradint"
 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/logingradint"
     >
+
     <TextView
         android:id="@+id/txt_toolbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/home"
+        android:text="@string/ranking"
         android:fontFamily="@font/andalus"
         android:textColor="#FFF"
         android:textSize="22sp"
@@ -21,18 +23,19 @@
 
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:weightSum="4"
+        android:weightSum="3"
         android:gravity="center"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/txt_toolbar"
         android:orientation="horizontal"
+        android:layout_margin="10dp"
         android:id="@+id/hometab"
         >
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.5"
-            android:background="@drawable/tabbutton"
+            android:layout_weight="1"
+            android:background="@drawable/tabbuttonselect"
             android:text="@string/this_week"
             android:textSize="20sp"
             android:fontFamily="@font/andalus"
@@ -42,36 +45,32 @@
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.5"
-            android:background="@drawable/tabbuttonselect"
+            android:layout_weight="1"
             android:text="@string/all_time"
             android:textSize="20sp"
             android:textAllCaps="false"
             android:fontFamily="@font/andalus"
             android:textColor="#FFF"
+            android:background="@drawable/tabbutton"
+            android:layout_marginLeft="10dp"
+            />
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/all_time"
+            android:textSize="20sp"
+            android:textAllCaps="false"
+            android:fontFamily="@font/andalus"
+            android:textColor="#FFF"
+            android:background="@drawable/tabbutton"
             android:layout_marginLeft="10dp"
             />
     </LinearLayout>
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/img_user"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/loginlogo"
-        android:layout_below="@+id/hometab"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        />
-    <TextView
-        android:id="@+id/name_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/mehran_akbari"
-        android:fontFamily="@font/andalus"
-        android:textColor="#FFF"
-        android:textSize="22sp"
-        android:layout_below="@id/img_user"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/hometab"/>
 
 </RelativeLayout>
