ranking fragment code completed

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,12 +94,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:text="@string/remmember_me"
-        android:switchMinWidth="70dp"
+        android:switchMinWidth="65dp"
          android:textSize="20sp"
         android:textColor="#FFF"
         android:layout_marginTop="15dp"
         android:layout_gravity="start"
-
+android:checked="true"
+        android:fontFamily="@font/andalus"
         android:layout_marginStart="12dp"
         android:track="@drawable/loginswitchtrack"
         android:thumb="@drawable/loginswitchthumb"
