--- a/app/src/main/res/drawable/loginswitchtrack.xml
+++ b/app/src/main/res/drawable/loginswitchtrack.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:dither="true" android:shape="rectangle" android:useLevel="false" android:visible="true">
-            <solid android:color="#31B8E2" />
+            <solid android:color="#DF12DDC0" />
             <corners android:radius="25dp" />
             <size android:width="2dp" android:height="23dp" />
         </shape>
