--- a/app/src/main/res/layout/activity_login_profile.xml
+++ b/app/src/main/res/layout/activity_login_profile.xml
@@ -71,6 +71,7 @@
                 android:layout_width="200dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:maxLength="20"
                 android:layout_marginEnd="40dp"
                 android:backgroundTint="#AAB3BE"
                 style="@style/myEditText"
