--- a/app/src/main/res/layout/fragmenthome.xml
+++ b/app/src/main/res/layout/fragmenthome.xml
@@ -109,15 +109,14 @@
                 android:background="@drawable/scoreshape"
                 >
                 <TextView
+                    android:id="@+id/score_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/_5450"
                     android:textColor="#5A5858"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:textSize="25sp"
                     android:fontFamily="@font/bernard"/>
-
 
 
             </FrameLayout>
