--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -1,44 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFF"
+    android:background="@drawable/messageshape"
     android:orientation="vertical">
         <ImageView
-            android:id="@+id/img_message"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:scaleType="fitXY"
-                android:src="@drawable/ic_error"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"/>
-<TextView
-    android:id="@+id/txt_message"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textSize="18sp"
-    android:text="@string/message"
-    android:textColor="#000000"
-    style="@style/myEditText"
-    android:gravity="left"
-    android:layout_margin="10sp"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="20dp"
-    android:layout_centerVertical="true"
-    android:layout_centerHorizontal="true"/>
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_ok"
-            android:layout_width="200dp"
+                android:id="@+id/img_message"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+                android:src="@drawable/ic_warning"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:contentDescription="@string/todo" />
+        <TextView
+                android:id="@+id/txt_titrmessage"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#49A3EA"
-            android:text="@string/ok"
-            android:textColor="#FFF"
-            android:textSize="20sp"
-           android:gravity="center"
-            android:layout_centerHorizontal="true"
-           android:layout_marginTop="20dp"
-           android:layout_alignParentBottom="true"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/titr"
+                android:textSize="20sp"
+                android:text="@string/warning"
+                android:layout_gravity="center"
+                android:textColor="#111"/>
+        <TextView
+                android:id="@+id/txt_textmessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/andalus"
+                android:textSize="17sp"
+            android:gravity="left"
+            android:layout_marginStart="2dp"
+                android:text="@string/please_enter_username"
+                android:layout_gravity="start"
+                android:textColor="#575555"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="30dp"
+                android:background="#514E4E"/>
+        <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_ok"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+                android:text="@string/done"
 
-            />
-</RelativeLayout>
+                android:textColor="#FFF"
+                android:textAllCaps="false"
+                android:background="@drawable/messagebutton"
+                android:layout_marginTop="5dp"/>
+
+
+</LinearLayout>
