--- a/app/src/main/res/layout/rankingrecyclerlist.xml
+++ b/app/src/main/res/layout/rankingrecyclerlist.xml
@@ -13,6 +13,7 @@ android:background="@drawable/rankinglistbackground"
     android:layout_margin="1dp"
     android:background="@drawable/rankingshape_recyclerranking">
     <TextView
+        android:id="@+id/rank_recyclerranking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -24,12 +25,14 @@ android:background="@drawable/rankinglistbackground"
 
 </FrameLayout>
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/image_recyclerranking"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_marginLeft="5dp"
         android:src="@drawable/girl"/>
     <TextView
+        android:id="@+id/name_rankingrecyclerlist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -41,13 +44,14 @@ android:background="@drawable/rankinglistbackground"
         android:layout_marginLeft="10dp"/>
 
     <TextView
+        android:id="@+id/score_recyclerranking"
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="top"
         android:fontFamily="@font/bernard"
-
-        android:gravity="center"
+android:layout_marginRight="5dp"
+        android:gravity="right|center"
         android:text="@string/_2500"
         android:textColor="#0E3EFF"
         android:textSize="18sp" />
