predict recyclerview complted

--- a/app/src/main/res/layout/activity_predict.xml
+++ b/app/src/main/res/layout/activity_predict.xml
@@ -69,6 +69,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_predictlist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/hometab"/>
