--- a/app/src/main/res/drawable/disablebuttonpredictlist.xml
+++ b/app/src/main/res/drawable/disablebuttonpredictlist.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape  android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#00D8FF"/>
+    <solid android:color="#ACB0B1"/>
     <size android:width="500dp" android:height="100dp"/>
     <corners android:radius="20dp"/>
     <stroke android:width="1dp" android:color="#858282"/>
