--- a/app/src/main/res/layout/fragmentranking.xml
+++ b/app/src/main/res/layout/fragmentranking.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relateiveparentranking"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:visibility="invisible"
+    android:layout_height="match_parent">
     <RelativeLayout
 
         android:layout_width="match_parent"
@@ -13,7 +14,7 @@
         android:background="@drawable/sectiononehomegradint"
         android:id="@+id/section1ranking"
 
-        tools:ignore="UselessParent">
+        >
         <TextView
             android:id="@+id/txt_toolbar"
             android:layout_width="wrap_content"
@@ -67,20 +68,48 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/hometab"
             android:gravity="center"
+
             android:layout_centerInParent="true"
             android:orientation="vertical">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/img_oneranking"
-                android:src="@drawable/girl"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginTop="20dp"
-                />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/img_oneranking"
+                    android:src="@drawable/loginlogo"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_marginTop="20dp"
+                    app:civ_border_width="1dp"
+                    app:civ_border_color="#E4D338"
+                    />
+                <FrameLayout
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_alignTop="@+id/img_oneranking"
+                  android:layout_alignRight="@+id/img_oneranking"
+                    android:layout_marginRight="6dp"
+                    android:layout_marginTop="-10dp"
+                    android:background="@drawable/badgeshapetopranking">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/arial"
+                    android:textSize="25sp"
+                    android:layout_marginBottom="5dp"
+                    android:textColor="#FFFFFF"
+                    android:text="@string/_1"/>
+                </FrameLayout>
+            </RelativeLayout>
+
+
             <TextView
                 android:id="@+id/txt_nameoneranking"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/mehran_akbari"
+                tools:text="@string/mehran_akbari"
                 android:textSize="15sp"
                 android:gravity="center"
                 android:fontFamily="@font/andalus"
@@ -96,7 +125,7 @@
                     android:id="@+id/txt_scoreoneranking"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/_5221"
+                    tools:text="@string/_5221"
                     android:gravity="center"
                     android:textSize="18sp"
                     android:textColor="#FFF"
@@ -106,30 +135,59 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lineartworanking"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@id/linearoneranking"
             android:layout_below="@id/hometab"
             android:layout_marginRight="5dp"
             android:gravity="center"
-            android:orientation="vertical">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/img_tworanking"
-                android:src="@drawable/girl"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
 
-                android:layout_marginTop="40dp"
-                />
+            android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/img_tworanking"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/loginlogo"
+                        app:civ_border_width="1dp"
+                    app:civ_border_color="#B6B2B2"
+                    android:layout_marginTop="40dp"
+                    />
+
+                <FrameLayout
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_alignTop="@+id/img_tworanking"
+                    android:layout_alignRight="@+id/img_tworanking"
+                    android:layout_marginRight="3dp"
+                    android:layout_marginTop="-10dp"
+                    android:background="@drawable/badgeshapetopranking">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/arial"
+                        android:textSize="22sp"
+                        android:layout_marginBottom="5dp"
+                        android:textColor="#FFFFFF"
+                        android:text="@string/_2"/>
+                </FrameLayout>
+            </RelativeLayout>
+
             <TextView
                 android:id="@+id/txt_nametworanking"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/mehran_akbari"
+                tools:text="@string/mehran_akbari"
                 android:textSize="15sp"
                 android:fontFamily="@font/andalus"
                 android:textColor="#E0E3E8"
                 android:gravity="center"
+
                 />
             <FrameLayout
                 android:layout_width="70dp"
@@ -141,7 +199,7 @@
                     android:id="@+id/txt_scoretworanking"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/_4870"
+                    tools:text="@string/_4870"
                     android:gravity="center"
                     android:textSize="18sp"
                     android:textColor="#FFF"
@@ -150,6 +208,7 @@
             </FrameLayout>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/linearthreeranking"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/linearoneranking"
@@ -157,18 +216,44 @@
             android:layout_marginStart="5dp"
             android:gravity="center"
             android:orientation="vertical">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/img_treeranking"
-                android:src="@drawable/girl"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginTop="50dp"
-                />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/img_treeranking"
+                    android:src="@drawable/loginlogo"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginTop="50dp"
+                    app:civ_border_width="1dp"
+                    app:civ_border_color="#F1940C"
+                    />
+                <FrameLayout
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:layout_alignTop="@+id/img_treeranking"
+                    android:layout_alignRight="@+id/img_treeranking"
+        android:layout_marginRight="3dp"
+                    android:layout_marginTop="-10dp"
+                    android:background="@drawable/badgeshapetopranking">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/arial"
+                        android:textSize="19sp"
+                        android:layout_marginBottom="5dp"
+                        android:textColor="#FFFFFF"
+                        android:text="@string/_3"/>
+                </FrameLayout>
+
+            </RelativeLayout>
             <TextView
                 android:id="@+id/txt_namethreeranking"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/mehran_akbari"
+                tools:text="@string/mehran_akbari"
                 android:textSize="15sp"
                 android:fontFamily="@font/andalus"
                 android:gravity="center"
@@ -183,7 +268,7 @@
                     android:id="@+id/txt_scorethreeranking"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/_3580"
+                    tools:text="@string/_3580"
                     android:gravity="center"
                     android:textSize="18sp"
                     android:textColor="#FFF"
@@ -200,5 +285,6 @@
         android:id="@+id/recycler_ranking"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:layout_below="@id/section1ranking"/>
 </RelativeLayout>
