--- a/app/src/main/res/layout/predictrecyclerlist.xml
+++ b/app/src/main/res/layout/predictrecyclerlist.xml
@@ -78,16 +78,17 @@
                     android:fontFamily="@font/arial"
                     android:background="@drawable/badgescorematchshape"
                     >
+
                     <TextView
                         android:id="@+id/txtadminhomegoal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="15sp"
-                        tools:text="@string/_1"
+                        android:layout_gravity="center"
                         android:fontFamily="@font/arial"
-                        android:textColor="#FFF"
                         android:gravity="center"
-                        android:layout_gravity="center"/>
+                        android:textColor="#FFF"
+                        android:textSize="15sp"
+                        tools:text="@string/_1" />
                 </FrameLayout>
 
             </RelativeLayout>
@@ -180,7 +181,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:textAllCaps="false"
-        android:text="@string/_7"
+        android:text="@string/_add"
         android:fontFamily="@font/bernard"
         android:textSize="25sp"
         android:textColor="#FFF"
