--- a/app/src/main/res/layout/predictrecyclerlist.xml
+++ b/app/src/main/res/layout/predictrecyclerlist.xml
@@ -46,9 +46,9 @@
                 android:gravity="center"
                 android:text="@string/manchester"
                 android:textColor="#0D0C0C"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_marginLeft="5dp"
-                android:fontFamily="@font/nawal"/>
+                android:fontFamily="@font/arial"/>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -117,10 +117,10 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/manchester"
-                android:textColor="#0D0C0C"
-                android:textSize="20sp"
+                android:textColor="#000000"
+                android:textSize="18sp"
                 android:layout_marginLeft="5dp"
-                android:fontFamily="@font/nawal"/>
+                android:fontFamily="@font/arial"/>
             <RelativeLayout
                 android:layout_marginRight="5dp"
                 android:layout_width="match_parent"
