predict changeprofile complted

--- a/app/src/main/res/layout/activity_login_profile.xml
+++ b/app/src/main/res/layout/activity_login_profile.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/loginprofile_parent"
@@ -40,6 +43,7 @@
         android:layout_centerHorizontal="true"
         />
     <LinearLayout
+        android:id="@+id/linearparent_registeractivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/txt_namelogo"
@@ -74,8 +78,12 @@
                 android:maxLength="20"
                 android:layout_marginEnd="40dp"
                 android:backgroundTint="#AAB3BE"
-                style="@style/myEditText"
-                android:textSize="21sp"
+               android:fontFamily="@font/bmitrabold"
+                android:textColor="#DFE1E3"
+                android:gravity="center"
+                android:textColorHint="#AAB3BE"
+                android:textSize="18sp"
+                android:singleLine="true"
                 android:layout_marginTop="40dp"
                 android:hint="@string/name"
                 android:layout_marginStart="5dp"
@@ -91,8 +99,12 @@
                 android:layout_weight="1"
                 android:layout_marginEnd="40dp"
                 android:backgroundTint="#AAB3BE"
-                android:textSize="21sp"
-                style="@style/myEditText"
+                android:fontFamily="@font/bmitrabold"
+                android:textColor="#DFE1E3"
+                android:gravity="center"
+                android:textColorHint="#AAB3BE"
+                android:textSize="18sp"
+                android:singleLine="true"
                 android:hint="@string/username"
                 android:layout_marginStart="5dp"
                 android:backgroundTintMode="add"/>
@@ -106,8 +118,12 @@
                 android:layout_weight="1"
                 android:layout_marginEnd="40dp"
                 android:backgroundTint="#AAB3BE"
-                android:textSize="21sp"
-                style="@style/myEditText"
+                android:fontFamily="@font/bmitrabold"
+                android:textColor="#DFE1E3"
+                android:gravity="center"
+                android:textColorHint="#AAB3BE"
+                android:textSize="18sp"
+                android:singleLine="true"
                 android:hint="@string/password"
                 android:layout_marginStart="5dp"
                 android:backgroundTintMode="add"/>
@@ -121,8 +137,12 @@
                 android:layout_weight="1"
                 android:layout_marginEnd="40dp"
                 android:backgroundTint="#AAB3BE"
-                android:textSize="21sp"
-                style="@style/myEditText"
+                android:fontFamily="@font/bmitrabold"
+                android:textColor="#DFE1E3"
+                android:gravity="center"
+                android:textColorHint="#AAB3BE"
+                android:textSize="18sp"
+                android:singleLine="true"
                 android:hint="@string/confirm"
                 android:layout_marginStart="5dp"
                 android:backgroundTintMode="add"/>
@@ -137,8 +157,12 @@
                 android:layout_marginEnd="40dp"
                 android:backgroundTint="#AAB3BE"
                 android:enabled="false"
-                android:textSize="19sp"
-                style="@style/myEditText"
+                android:fontFamily="@font/bmitrabold"
+                android:textColor="#DFE1E3"
+                android:gravity="center"
+                android:textColorHint="#AAB3BE"
+                android:textSize="18sp"
+                android:singleLine="true"
                 android:hint="@string/phone_number"
                 android:layout_marginStart="5dp"
                 android:backgroundTintMode="add"/>
@@ -155,7 +179,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="@string/register"
-                android:textSize="22sp"
+                android:textSize="25sp"
+                android:fontFamily="@font/bmitrabold"
                 android:textAllCaps="false"
                 android:layout_marginTop="15dp"
                 android:layout_marginStart="10dp"
@@ -173,9 +198,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                android:fontFamily="@font/andalus"
+                android:layout_alignParentRight="true"
+                android:fontFamily="@font/bmitrabold"
                 android:textColor="#9CA0A7"
                 android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+
                 android:text="@string/do_have_an_account"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
@@ -186,15 +214,15 @@
                 android:id="@+id/txt_loginclick_loginprofileactivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_toEndOf="@id/txt_loginaccounttext"
+                android:layout_marginEnd="5dp"
+                android:layout_toStartOf="@id/txt_loginaccounttext"
                 android:layout_marginTop="10dp"
                 android:layout_alignParentBottom="true"
                 android:text="@string/login"
                 android:layout_marginBottom="5dp"
-                android:fontFamily="@font/andalus"
-                android:textColor="#E10D0D"
-                android:textSize="20sp" />
+                android:fontFamily="@font/bmitrabold"
+                 android:textColor="#03A9F4"
+                android:textSize="22sp" />
         </RelativeLayout>
 
 
