--- a/app/src/main/res/drawable/loadingshape.xml
+++ b/app/src/main/res/drawable/loadingshape.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <size android:height="60dp" android:width="500dp"/>
     <gradient android:angle="180"
-        android:startColor="#E8DCDC"
-        android:endColor="#34A2B6"/>
+        android:endColor="#E8DCDC"
+        android:startColor="#34A2B6"/>
     <corners android:radius="15dp"/>
 </shape>
