--- a/app/src/main/res/drawable/messageshape.xml
+++ b/app/src/main/res/drawable/messageshape.xml
@@ -4,8 +4,9 @@
     <gradient android:angle="90"
         android:startColor="#FFFFFF"
         android:centerColor="#F3ECEC"
-        android:endColor="#6CB5C3"/>
-    <corners android:topLeftRadius="15dp"  android:topRightRadius="15dp"/>
+        android:endColor="#BDBDBD"/>
+    <stroke android:color="#3C3C3C" android:width="1dp"/>
+
 
 
 </shape>
