--- a/app/src/main/res/layout/activity_validate_code.xml
+++ b/app/src/main/res/layout/activity_validate_code.xml
@@ -1,227 +1,210 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
 android:id="@+id/validateactivity_parent"
     android:background="@drawable/logingradint"
-    tools:context=".activity.LoginActivity">
+    tools:context=".activity.LoginActivity"
+    android:layout_marginTop="-75dp"
+   >
+    <View
+        android:id="@+id/logo"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:background="@drawable/loginlogo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="95dp"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FFF"
+        android:text="@string/l"
+        android:fontFamily="@font/simsun"
+        android:layout_marginTop="115sp"
+        android:layout_centerHorizontal="true"
+        android:textSize="90sp"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/live_predict"
+        android:textSize="22sp"
+        android:fontFamily="@font/andalus"
+        android:layout_marginTop="2dp"
+        android:layout_below="@id/logo"
+        android:layout_centerHorizontal="true"
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:orientation="vertical">
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal">
-            <View
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:background="@drawable/loginlogo"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFF"
-                android:text="@string/l"
-                android:fontFamily="@font/simsun"
-                android:layout_marginTop="35sp"
-                android:layout_gravity="center_horizontal"
-                android:textSize="90sp"
-                />
+        android:textColor="#C6CBD4"/>
 
-        </FrameLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/live_predict"
-            android:textSize="22sp"
-            android:fontFamily="@font/andalus"
-            android:layout_marginTop="2dp"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:textColor="#C6CBD4"/>
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
+    <TextView
+        android:id="@+id/txt_entercodetext_validateactivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:fontFamily="@font/bmitrabold"
+        android:textColor="#BDBCBC"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:gravity="center"
-        android:orientation="vertical"
-        >
-        <TextView
-            android:id="@+id/txt_entercodetext_validateactivity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="22sp"
-            android:fontFamily="@font/andalus"
-            android:textColor="#AEB0B5"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:gravity="center"
-            android:text="@string/we_sent_a_code_via_sms_to_number_09184591468_please_enter_it"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:orientation="horizontal">
 
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edt_numberone_validateactivity"
-                android:inputType="number"
-                android:maxLength="1"
-                android:gravity="center"
-                android:imeOptions="actionNext"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                style="@style/myEditText"
-                android:layout_gravity="center"
-                android:backgroundTint="#AAB3BE"
-                android:backgroundTintMode="add"
-               />
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edt_numbertwo_validateactivity"
-                android:inputType="number"
-                android:maxLength="1"
-                android:gravity="center"
-                android:imeOptions="actionNext"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                style="@style/myEditText"
-                android:backgroundTint="#AAB3BE"
-                android:backgroundTintMode="add"
-                android:layout_marginStart="5dp"/>
+        android:layout_centerInParent="true"
+        android:text="@string/sendcodetext"/>
 
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edt_numberthree_validateactivity"
-                android:inputType="number"
-                android:maxLength="1"
-                android:gravity="center"
-                android:imeOptions="actionNext"
-                style="@style/myEditText"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:backgroundTintMode="add"
-                android:backgroundTint="#AAB3BE" />
-
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edt_numberfor_validateactivity"
-                android:inputType="number"
-                android:maxLength="1"
-                android:gravity="center"
-                android:imeOptions="actionNext"
-                style="@style/myEditText"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:backgroundTintMode="add"
-                android:backgroundTint="#AAB3BE" />
-
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edt_numberfive_validateactivity"
-                android:inputType="number"
-                android:maxLength="1"
-                android:gravity="center"
-                android:imeOptions="actionDone"
-                style="@style/myEditText"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:backgroundTintMode="add"
-                android:backgroundTint="#AAB3BE" />
-
-
-        </LinearLayout>
-
-
-
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_next_validateactivity"
-            android:layout_width="match_parent"
-            android:layout_height="47dp"
-            android:text="@string/next"
-            android:textSize="25sp"
-            android:textAllCaps="false"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/loginbutton"
-            android:textColor="#FFF"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/andalus"
-            android:textSize="20sp"
-            android:textColor="#9CA0A7"
-            android:layout_marginTop="20dp"
-            android:text="@string/did_not_the_code"/>
-            <TextView
-                android:id="@+id/txt_resendcodeclick_validateactivity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/andalus"
-            android:textSize="20sp" android:layout_marginTop="20dp"
-            android:textColor="#E10D0D"
-            android:text="@string/resend_code"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-
-
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/liner_code_edittext"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:orientation="horizontal"
+        android:layout_below="@id/txt_entercodetext_validateactivity">
 
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/txt_loginaccounttext"
-            android:layout_width="wrap_content"
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edt_numberone_validateactivity"
+            android:inputType="number"
+            android:maxLength="1"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:fontFamily="@font/andalus"
-            android:textColor="#9CA0A7"
-            android:layout_marginTop="10dp"
-            android:text="@string/do_have_an_account"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="5dp"
-            />
+            style="@style/myEditText"
+            android:layout_gravity="center"
+            android:backgroundTint="#AAB3BE"
+            android:backgroundTintMode="add"
 
-        <TextView
-            android:id="@+id/txt_loginclick_validateactivity"
-            android:layout_width="wrap_content"
+            />
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edt_numbertwo_validateactivity"
+            android:inputType="number"
+            android:maxLength="1"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            style="@style/myEditText"
+            android:backgroundTint="#AAB3BE"
+            android:backgroundTintMode="add"
+            android:layout_marginStart="5dp"/>
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edt_numberthree_validateactivity"
+            android:inputType="number"
+            android:maxLength="1"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            style="@style/myEditText"
+            android:layout_width="0dp"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_toEndOf="@id/txt_loginaccounttext"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentBottom="true"
-            android:text="@string/login"
-            android:layout_marginBottom="5dp"
-            android:fontFamily="@font/andalus"
-            android:textColor="#E10D0D"
-            android:textSize="20sp" />
-    </RelativeLayout>
+            android:backgroundTintMode="add"
+            android:backgroundTint="#AAB3BE" />
 
-</LinearLayout>
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edt_numberfor_validateactivity"
+            android:inputType="number"
+            android:maxLength="1"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            style="@style/myEditText"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:backgroundTintMode="add"
+            android:backgroundTint="#AAB3BE" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edt_numberfive_validateactivity"
+            android:inputType="number"
+            android:maxLength="1"
+            android:gravity="center"
+            android:imeOptions="actionDone"
+            style="@style/myEditText"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:backgroundTintMode="add"
+            android:backgroundTint="#AAB3BE" />
+
+
+    </LinearLayout>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_next_validateactivity"
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
+        android:text="@string/_ok"
+        android:textSize="25sp"
+        android:textAllCaps="false"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:fontFamily="@font/bmitrabold"
+        android:background="@drawable/loginbutton"
+        android:layout_below="@id/liner_code_edittext"
+        android:textColor="#FFF"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/bmitrabold"
+        android:textSize="17sp"
+        android:textColor="#9CA0A7"
+        android:layout_marginEnd="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="20dp"
+        android:text="@string/did_not_the_code"
+        android:layout_below="@id/btn_next_validateactivity"/>
+    <TextView
+        android:id="@+id/txt_resendcodeclick_validateactivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/bmitrabold"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="10dp"
+android:layout_below="@id/btn_next_validateactivity"
+        android:textSize="17sp"
+        android:layout_marginTop="20dp"
+        android:textColor="#03A9F4"
+        android:text="@string/resend_code"/>
+
+
+    <TextView
+        android:id="@+id/txt_loginaccounttext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:fontFamily="@font/bmitrabold"
+        android:textColor="#9CA0A7"
+        android:layout_marginTop="10dp"
+        android:text="@string/do_have_an_account"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="5dp"
+        />
+
+    <TextView
+        android:id="@+id/txt_loginclick_validateactivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_toStartOf="@id/txt_loginaccounttext"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentBottom="true"
+        android:text="@string/login"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="@font/bmitrabold"
+        android:textColor="#03A9F4"
+        android:textSize="20sp" />
+
+</RelativeLayout>
