--- a/app/src/main/res/layout/fragmenthome.xml
+++ b/app/src/main/res/layout/fragmenthome.xml
@@ -5,68 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
   >
-    <RelativeLayout
+    <View
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:background="@drawable/sectiononehomegradint"
         android:id="@+id/section1"
+        />
 
-        >
-        <TextView
-            android:id="@+id/txt_toolbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/home"
-            android:fontFamily="@font/andalus"
-            android:textColor="#FFF"
-            android:textSize="22sp"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="2dp"/>
-        <LinearLayout
-
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:weightSum="4"
-            android:gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/txt_toolbar"
-            android:orientation="horizontal"
-            android:id="@+id/hometab"
-            >
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.5"
-                android:background="@drawable/tabbuttonselect"
-                android:text="@string/this_week"
-                android:textSize="20sp"
-                android:fontFamily="@font/andalus"
-                android:textColor="#FFF"
-                android:textAllCaps="false"
-                android:layout_margin="1dp"/>
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.5"
-                android:text="@string/all_time"
-                android:textSize="20sp"
-                android:textAllCaps="false"
-                android:fontFamily="@font/andalus"
-                android:textColor="#FFF"
-                android:background="@drawable/tabbutton"
-                android:layout_marginLeft="10dp"
-                />
-        </LinearLayout>
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_user"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:src="@drawable/loginlogo"
-            android:layout_below="@+id/hometab"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             />
         <TextView
             android:id="@+id/name_user"
@@ -83,43 +36,86 @@
 
 
 
-
-
-    </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="4"
-        android:gravity="top|center"
+    <View
+        android:id="@+id/framrankandscore"
+        android:layout_width="310dp"
+        android:layout_below="@id/section1"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:layout_below="@id/section1">
+        android:layout_height="200dp"/>
 
-        <LinearLayout
-            android:layout_marginBottom="10dp"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:gravity="center"
-            android:layout_weight="1.5"
-            android:orientation="vertical"
-            android:background="@drawable/gradintscoreandrank">
-            <FrameLayout
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:background="@drawable/scoreshape"
-                >
-                <TextView
-                    android:id="@+id/score_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#5A5858"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:textSize="25sp"
-                    android:fontFamily="@font/bernard"/>
+    <View
+        android:id="@+id/veiwscore"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/section1"
+        android:background="@drawable/gradintscoreandrank"
+        android:layout_alignLeft="@id/framrankandscore"
+        />
+    <View
+        android:id="@+id/viewrank"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:layout_below="@id/section1"
+        android:layout_alignRight="@id/framrankandscore"
+        android:background="@drawable/gradintscoreandrank"
+        android:layout_marginTop="20dp"
+        android:layout_toRightOf="@id/veiwscore"
+        android:layout_marginLeft="10dp"
+
+        />
+    <View
+        android:id="@+id/shapescore"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:background="@drawable/scoreshape"
+        android:layout_alignTop="@id/veiwscore"
+        android:layout_alignLeft="@id/veiwscore"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        />
+    <TextView
+        android:id="@+id/score_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#5A5858"
+        android:gravity="center"
 
 
-            </FrameLayout>
+        android:textSize="25sp"
+        android:fontFamily="@font/bernard"
+        android:layout_alignStart="@id/shapescore"
+        android:layout_alignTop="@id/shapescore"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="50dp"
+        />
+
+    <View
+        android:id="@+id/shapesrank"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:background="@drawable/rankshape"
+        android:layout_alignTop="@id/viewrank"
+        android:layout_alignLeft="@id/viewrank"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#5A5858"
+        android:gravity="center"
+        android:text="@string/_1"
+        android:textSize="25sp"
+        android:fontFamily="@font/bernard"
+        android:layout_alignStart="@id/shapesrank"
+        android:layout_alignTop="@id/shapesrank"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="50dp"
+        />
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -127,37 +123,14 @@
                 android:layout_marginTop="10sp"
                 android:text="@string/score"
                 android:textColor="#FFF"
-                android:textSize="30sp"/>
+                android:textSize="30sp"
+                android:layout_alignBottom="@id/veiwscore"
+                android:layout_alignLeft="@id/veiwscore"
+                android:layout_marginLeft="45dp"
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginBottom="10dp"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:gravity="center"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1.5"
-            android:orientation="vertical"
-            android:background="@drawable/gradintscoreandrank">
-            <FrameLayout
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:background="@drawable/rankshape"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/_23"
-                    android:textColor="#5A5858"
-                    android:layout_gravity="center"
-                    android:textSize="25sp"
-                    android:gravity="center"
-                    android:fontFamily="@font/bernard"/>
+                />
 
 
-
-            </FrameLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -165,11 +138,14 @@
                 android:layout_marginTop="10sp"
                 android:text="@string/rank"
                 android:textColor="#FFF"
-                android:textSize="30sp"/>
+                android:textSize="30sp"
+                android:layout_alignBottom="@id/viewrank"
+                android:layout_alignLeft="@id/viewrank"
+                android:layout_marginLeft="45dp"
 
-        </LinearLayout>
+                />
 
-    </LinearLayout>
+
 
 </RelativeLayout
     >
