--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -7,8 +7,8 @@
     android:orientation="vertical">
         <ImageView
                 android:id="@+id/img_message"
-            android:layout_width="52dp"
-            android:layout_height="52dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
                 android:src="@drawable/ic_warning"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
@@ -28,13 +28,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:fontFamily="@font/andalus"
-                android:textSize="17sp"
-            android:gravity="left"
-            android:layout_marginStart="2dp"
+                android:fontFamily="@font/bmitra"
+                android:textSize="19sp"
+            android:gravity="center"
+            android:layout_marginEnd="2dp"
+            android:layout_margin="8dp"
+            android:padding="8dp"
                 android:text="@string/please_enter_username"
-                android:layout_gravity="start"
-                android:textColor="#575555"/>
+                android:layout_gravity="end"
+
+                android:textColor="#151515"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -45,10 +48,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
                 android:text="@string/done"
-
-                android:textColor="#FFF"
+            android:textSize="22sp"
+                        android:fontFamily="@font/bernard"
+                android:textColor="#090909"
                 android:textAllCaps="false"
-                android:background="@drawable/messagebutton"
+                android:background="@android:color/transparent"
                 android:layout_marginTop="5dp"/>
 
 
