--- a/app/src/main/res/layout/predictrecyclerlist.xml
+++ b/app/src/main/res/layout/predictrecyclerlist.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="80dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_margin="5dp"
@@ -17,25 +17,25 @@
           android:layout_gravity="center"
           android:gravity="center"
           android:fontFamily="@font/bernard"
-          android:textSize="22sp"
+          android:textSize="18sp"
           />
     <FrameLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
-          android:layout_weight="2.4"
+          android:layout_weight="2.6"
         android:weightSum="2"
          >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:baselineAligned="true"
             android:orientation="horizontal"
             android:layout_gravity="top"
             >
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/img_hometeam"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:layout_gravity="center"
                 android:src="@drawable/girl"/>
             <TextView
@@ -56,13 +56,13 @@
                 >
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edt_userhometeamgol"
-                    android:layout_width="38dp"
-                    android:layout_height="38dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
                     android:gravity="center"
                     android:maxLength="2"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                 android:layout_marginRight="15dp"
                     android:textColor="#292929"
                     android:inputType="number"
@@ -70,8 +70,8 @@
                     android:background="@drawable/predictedittextshape"
                     android:layout_marginLeft="8dp"/>
                 <FrameLayout
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_alignRight="@id/edt_userhometeamgol"
                     android:layout_marginRight="-14dp"
                     android:gravity="right"
@@ -87,7 +87,7 @@
                         android:fontFamily="@font/arial"
                         android:gravity="center"
                         android:textColor="#FFF"
-                        android:textSize="15sp"
+                        android:textSize="13sp"
                         tools:text="@string/_1" />
                 </FrameLayout>
 
@@ -100,14 +100,14 @@
         <LinearLayout
 
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
 
             android:layout_gravity="bottom"
            >
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/img_guestteam"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:layout_gravity="center"
                 android:src="@drawable/girl"/>
             <TextView
@@ -129,8 +129,8 @@
                 >
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edt_userguestteamgol"
-                    android:layout_width="38dp"
-                    android:layout_height="38dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
 
                     android:maxLength="2"
                     android:inputType="number"
@@ -138,14 +138,14 @@
                     android:layout_centerInParent="true"
                     android:gravity="center"
                     android:fontFamily="@font/bernard"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:layout_marginRight="15dp"
                     android:textColor="#292929"
                     android:background="@drawable/predictedittextshape"
                     android:layout_marginLeft="8dp"/>
                 <FrameLayout
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_alignRight="@id/edt_userguestteamgol"
                    android:layout_marginRight="-14dp"
                     android:gravity="right"
@@ -156,9 +156,9 @@
                         android:id="@+id/txt_adminguestgol"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="15sp"
+                        android:textSize="13sp"
 
-                        tools:text="@string/_1"
+                        tools:text="9"
                         android:fontFamily="@font/arial"
                         android:textColor="#FFF"
                         android:gravity="center"
@@ -176,14 +176,14 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_addpredict"
         android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:layout_weight="0.9"
+        android:layout_height="45dp"
+        android:layout_weight="0.7"
         android:layout_gravity="center"
         android:gravity="center"
         android:textAllCaps="false"
         android:text="@string/_add"
         android:fontFamily="@font/bernard"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textColor="#FFF"
         android:background="@drawable/predictitembuttonshape"
         android:layout_marginRight="2dp"/>
