--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">#24334C</item>
+        <item name="android:statusBarColor" tools:targetApi="l">#3C4C67</item>
         <!-- Customize your theme here. -->
     </style>
     <style name="myEditText" parent="TextAppearance.AppCompat">
